Fixed z-index issue

--- a/client/src/css/pages/404.css
+++ b/client/src/css/pages/404.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: calc(100vh);
   object-fit: cover;
-  z-index: -100;
+  z-index: 1;
   min-height: 500px;
 }
 
